# autel-logger

./: README.md  pyproject.toml
doc/source/: conf.py  index.rst
doc/source/reference/: cli.rst  config.rst  index.rst  spatial.rst
doc/source/reference/flight/: flight.rst  index.rst  media.rst
doc/source/reference/parser/: index.rst  model.rst  record_parser.rst  types.rst
research/: aeflr.html
src/autel_logger/: config.py  main.py  spatial.py
src/autel_logger/blender_io/: exporter.py  importer.py  types.py
src/autel_logger/blender_io/importer/: __init__.py  operators.py  props.py  ui.py
src/autel_logger/flight/: flight.py  media.py
src/autel_logger/parser/: model.py  record_parser.py  types.py
